[project]
name = "canvas-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "gnureadline>=8.2.13",
    "ipykernel>=6.30.1",
    "nltk>=3.9.1",
    "openai>=1.102.0",
    "tqdm>=4.67.1",
]
